--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "",
-  "dependencies": {},
+  "dependencies": {
+    "leaflet": "^1.6.0"
+  },
   "devDependencies": {
     "snowpack": "^2.9.0",
     "typescript": "^4.0.2"
