--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/leaflet": "^1.5.17",
     "chart.js": "^2.9.3",
     "chartjs": "^0.3.24",
+    "chartjs-plugin-zoom": "^0.7.7",
     "leaflet": "^1.6.0"
   },
   "devDependencies": {
