--- a/snowpack.json
+++ b/snowpack.json
@@ -1,3 +1,3 @@
 {
-  "exclude": [".git", "node_modules", "*.json", "information"]
+  "exclude": [".git/**", "node_modules/**", "*.json", "information/**", "LICENSE", "README.md", "package*json"]
 }
