--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "leaflet": "^1.6.0"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.0.1",
+    "@typescript-eslint/parser": "^4.0.1",
+    "eslint": "^7.8.1",
     "snowpack": "^2.9.0",
     "typescript": "^4.0.2"
   },
