Minify css during build1

--- a/snowpack.json
+++ b/snowpack.json
@@ -1,3 +1,7 @@
 {
-  "exclude": [".git/**", "node_modules/**", "*.json", "information/**", "LICENSE", "README.md", "package*json"]
+  "install": ["node_modules/leaflet/dist/leaflet.css"],
+  "exclude": [".git/**", "node_modules/**", "*.json", "information/**", "LICENSE", "README.md", "package*json"],
+  "plugins": [
+    "@snowpack/plugin-postcss"
+  ]
 }
