--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "leaflet": "^1.6.0"
   },
   "devDependencies": {
+    "@snowpack/plugin-postcss": "^1.0.2",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "cssnano": "^4.1.10",
     "eslint": "^7.8.1",
+    "postcss": "^7.0.32",
+    "postcss-cli": "^7.1.2",
     "snowpack": "^2.9.0",
     "typescript": "^4.0.2"
   },
