--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "@types/chart.js": "^2.9.24",
     "@types/leaflet": "^1.5.17",
+    "@types/topojson": "^3.2.2",
     "chart.js": "^2.9.3",
     "chartjs": "^0.3.24",
     "chartjs-plugin-zoom": "^0.7.7",
-    "leaflet": "^1.7.1"
+    "leaflet": "^1.7.1",
+    "topojson": "^3.0.2"
   },
   "devDependencies": {
     "@snowpack/plugin-postcss": "^1.0.2",
